--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 [tool.poetry]
 name = "catt"
-version = "0.12.10"
+version = "0.13.0"
 description = "Cast All The Things allows you to send videos from many, many online sources to your Chromecast."
 license = "BSD"
 keywords = ["chromecast", "cast", "catt", "cast_all_the_things"]
@@ -28,9 +28,9 @@ catt = "catt.cli:main"
 python = ">=3.7"
 click = ">=7.1.2"
 ifaddr = ">=0.1.7"
-pychromecast = ">=12.1.4, <13"
 requests = ">=2.23.0"
 yt-dlp = ">=2022.6.22.1"
+pychromecast = ">=13.0.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "*"
